k8s/k8s-complete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ninja-nodejs-service  
    # tags.datadoghq.com/env: production
    # tags.datadoghq.com/service: ninja-nodejs-service
    # tags.datadoghq.com/version: 5.35.0      
  name: ninja-nodejs-service
  namespace: default
spec:
  selector:
    matchLabels:
      app: ninja-nodejs-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ninja-nodejs-service
        # tags.datadoghq.com/env: production
        # tags.datadoghq.com/service: ninja-nodejs-service
        # tags.datadoghq.com/version: 5.35.0
        # admission.datadoghq.com/enabled: "true"
      # annotations:
      #   admission.datadoghq.com/js-lib.version: v5.35.0
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-class
                operator: In
                values:
                - workloads
            weight: 1
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - ninja-nodejs-service
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - image: 955487219011.dkr.ecr.ap-south-1.amazonaws.com/backend-node-express-develop:7861dbc2c9fdfbd7a3443be6132156bab7d38084
        imagePullPolicy: IfNotPresent
        name: ninja-nodejs-service
        ports:
        - containerPort: 6666
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "3"
            memory: "3Gi"
          requests:
            cpu: "1.5"
            memory: "2Gi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-class
        operator: Equal
        value: workloads

---

apiVersion: v1
kind: Service
metadata:
  name: ninja-nodejs-service
  namespace: default
spec:
  ports:
  - name: http
    port: 6666
    protocol: TCP
    targetPort: 6666
  selector:
    app: ninja-nodejs-service
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
  name: ninja-nodejs-service
  namespace: default
spec:
  gateways:
  - tap-http-gw
  hosts:
  - ninja-nodejs-service.tapperstaging.com
  - ninja-nodejs-service
  http:
  - route:
    - destination:
        host: ninja-nodejs-service
        port:
          number: 6666

# ---

# apiVersion: policy/v1
# kind: PodDisruptionBudget
# metadata:
#   name: ninja-nodejs-service-pdb
# namespace: default
# spec:
#   maxUnavailable: 1
#   selector:
#     matchLabels:
#     app: ninja-nodejs-service
